<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_view_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="6dp"
        app:layout_constraintBottom_toTopOf="@id/sv_scroll_view"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/family_guy_wins"
            app:layout_constraintBottom_toTopOf="@id/bt_view_example"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="6dp" />

        <Button
            android:id="@+id/bt_view_example"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:text="@string/example_view"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_image" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/sv_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_view_image">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="6dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/apply_effects_to"
                android:textColor="@color/black" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/bt_apply_effecf"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/rb_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/black"
                    android:checked="true"
                    android:gravity="center|start"
                    android:text="@string/image"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/rb_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/black"
                    android:gravity="center|start"
                    android:text="@string/button"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/rb_both"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/black"
                    android:gravity="center|start"
                    android:text="@string/both"
                    android:textColor="@color/black" />
            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type_of_render_effect"
                android:textColor="@color/black" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/bt_apply_effecf"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/rb_blur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/black"
                    android:checked="true"
                    android:gravity="center|start"
                    android:text="@string/blur"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/rb_blend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/black"
                    android:gravity="center|start"
                    android:text="@string/blend"
                    android:textColor="@color/black" />
            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/put_your_radius_values_1"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_x"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:hint="@string/type_your_x_radius"
                    android:inputType="number"
                    android:maxLines="1" />

                <EditText
                    android:id="@+id/et_y"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:hint="@string/type_your_y_radius"
                    android:inputType="number"
                    android:maxLines="1" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <Spinner
                android:id="@+id/sp_blend_mode"
                android:layout_width="match_parent"
                android:layout_height="60dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <Spinner
                android:id="@+id/sp_shader_tile_mode"
                android:layout_width="match_parent"
                android:layout_height="60dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <Button
                android:id="@+id/bt_apply_effecf"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/apply_render_effect" />

            <Button
                android:id="@+id/bt_clear_effect"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/clear_effects" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>